Se termina la parte de header del clon de google

--- a/Google_clon.html
+++ b/Google_clon.html
@@ -8,6 +8,30 @@
         <link rel="stylesheet" href="Google_clon.css">
     </head>
     <body>
-        
+        <!--Aqui inicia a maquetar el header-->
+        <header>
+            <nav>
+                <ul class="nav_right_section">
+                    <li>
+                       <a href="">Gmail</a> 
+                    </li>
+                    <li>
+                        <a href="">Imagenes</a>
+                    </li>
+                    <li class="menu_icon">
+                        <a href="">
+                            <img src="" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <!--De esta manera se coloca imagenes en html-->
+                            <img src="https://lh3.googleusercontent.com/ogw/ADGmqu9DmNTh86y7AGzD_H3OsG4Fl5BCH0B2Sco75Ljr=s32-c-mo" alt="Imagen de perfil">
+                        </a>    
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <!--Aqui finaliza de maquetar el header-->
     </body>
 </html>
