--- a/Google_clon.html
+++ b/Google_clon.html
@@ -32,6 +32,24 @@
                 </ul>
             </nav>
         </header>
+        <main>
+            <section class="main_logo">
+                <img src="" alt="">
+            </section>
+            <section class="main_input">
+                <div class="main_input_container">
+                    <span class="search_icon">
+
+                    </span>
+                    <input type="text">
+                    <a class="micro_icon" href=""></a>
+                </div>
+            </section>
+            <section class="main_buttons">
+                <div><button>Buscar con Google</button></div>
+                <div><button>Me siento con suerte</button></div>
+            </section>
+        </main>
         <!--Aqui finaliza de maquetar el header-->
     </body>
 </html>
