Se crea tres secciones en el main y se finaliza la seccion del logo y del input

--- a/Google_clon.html
+++ b/Google_clon.html
@@ -32,17 +32,19 @@
                 </ul>
             </nav>
         </header>
+        <!--Aqui finaliza de maquetar el header-->
+        <!--Aqui inicia a maquetar el main-->
         <main>
             <section class="main_logo">
-                <img src="" alt="">
+                <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="">
             </section>
             <section class="main_input">
                 <div class="main_input_container">
                     <span class="search_icon">
-
+                        
                     </span>
                     <input type="text">
-                    <a class="micro_icon" href=""></a>
+                    <a href="" class="micro_icon"></a>
                 </div>
             </section>
             <section class="main_buttons">
@@ -50,6 +52,6 @@
                 <div><button>Me siento con suerte</button></div>
             </section>
         </main>
-        <!--Aqui finaliza de maquetar el header-->
+        <!--Aqui finaliza de maquetar el main-->
     </body>
 </html>
