--- a/Google_clon.html
+++ b/Google_clon.html
@@ -48,8 +48,12 @@
                 </div>
             </section>
             <section class="main_buttons">
-                <div><button>Buscar con Google</button></div>
-                <div><button>Me siento con suerte</button></div>
+                <div>
+                    <button>Buscar con Google</button>
+                </div>
+                <div>
+                    <button>Me siento con suerte</button>
+                </div>
             </section>
         </main>
         <!--Aqui finaliza de maquetar el main-->
