Se finalizar el footer y con esto el proyecto en general

--- a/Google_clon.html
+++ b/Google_clon.html
@@ -57,5 +57,34 @@
             </section>
         </main>
         <!--Aqui finaliza de maquetar el main-->
+        <!--Aqui inicia a maquetar el footer-->
+        <footer>
+            <ul class="section_left">
+                <li>
+                    <a href="">Publicidad</a>
+                </li>
+                <li>
+                    <a href="">Negocios</a>
+                </li>
+                <li>
+                    <a href="">Acerca de</a>
+                </li>
+                <li>
+                    <a href="">Como funciona la busqueda</a>
+                </li>
+            </ul>
+            <ul class="section_right">
+                <li>
+                    <a href="">Privacidad</a>
+                </li>
+                <li>
+                    <a href="">Condiciones</a>
+                </li>
+                <li>
+                    <a href="">Preferencias</a>
+                </li>
+            </ul>
+        </footer>
+        <!--Aqui finaliza de maquetar el footer-->
     </body>
 </html>
